--- a/src/App.css
+++ b/src/App.css
@@ -1,69 +1,58 @@
 .App {
   text-align: center;
   margin:0;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  background-color: black;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.search-container {
-  align-items: center;
-  display: flex;
-  flex-direction: row;
-  justify-content: left;
-}
-
-.search-name {
-  align-items: flex-end;
-  justify-content: center;
-  display: block;
-  flex-direction: column;
-}
-
-.artist-image {
-  display: block;
-  max-width:64px;
-  max-height:64px;
-  width: fit-content;
-  height: fit-content;
-  border-radius: 50%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  overflow: auto;
 }
 
 .search-results {
   display: grid;
   background-color: rgb(44, 44, 44);
   color: white;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
+}
+
+.search-container{
+  display: flex;
+  align-items: flex-start;
+  min-height: 100%;
+  overflow: hidden;
+  margin: 20px;
+}
+
+.search-name *{
+  margin: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: 100%;
+  text-align: left;
+}
+
+.search-name{
+  margin-left: 20px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: 100%;
+  text-align: left;
+  align-self: center;
+}
+
+.artist-image {
+  display: inline-block;
+  max-width:64px;
+  min-height:64px;
+  max-height:64px;
+  min-height:64px;
+  width: fit-content;
+  height: fit-content;
+  border-radius: 50%;
 }
