--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
   margin:0;
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  
   background-color: black;
   color: white;
   height: 100%;
@@ -10,6 +10,26 @@
   left: 0;
   width: 100%;
   overflow: auto;
+  grid-template-rows: 11fr 1fr;
+  grid-template-columns: 1fr 3fr;
+}
+
+.App-Main {
+  grid-column: 1 / 3;
+  grid-row: 1 / 2 ;
+  display: grid;
+  grid-template-columns: 1fr 6fr;
+  grid-template-rows: subgrid;
+}
+
+.player {
+  background-color: rgb(51, 51, 51);
+  color: red ;
+  grid-column: 1 / 3;
+  grid-row: 2 / 3 ;
+  display: grid;
+  grid-template-columns: subgrid;
+  grid-template-rows: subgrid;
 }
 
 .collection-section {
@@ -19,6 +39,7 @@
 
 .playlist-section {
   background-color: rgb(17, 17, 17);
+  height: 100% ;
 }
 
 .search-results {
