--- a/src/App.css
+++ b/src/App.css
@@ -28,8 +28,12 @@
   grid-column: 1 / 3;
   grid-row: 2 / 3 ;
   display: grid;
-  grid-template-columns: subgrid;
-  grid-template-rows: subgrid;
+  grid-template-columns:1fr 1fr 1fr 1fr 1fr;
+  align-items: center;
+}
+
+.player-volume {
+  margin: 20px;
 }
 
 .collection-section {
