--- a/src/App.css
+++ b/src/App.css
@@ -90,3 +90,20 @@
   height: fit-content;
   border-radius: 50%;
 }
+
+.react-contextmenu {
+  background-color: rgb(34, 34, 34);
+  background-clip: padding-box;
+  border: 1px solid rgba(107, 107, 107, 0.15);
+  border-radius: 0.25rem;
+  color: #ffffff;
+  font-size: 16px;
+  margin: 2px 0 0;
+  min-width: 100px;
+  outline: none;
+  opacity: 0;
+  padding: 5px 0;
+  pointer-events: none;
+  text-align: center;
+  transition: opacity 250ms ease !important;
+}
